# educational_proj

./: .gitignore  README.md
3D_Reconstruction/: 3D_Reconstruction.cpp  3D_Reconstruction.sln  3D_Reconstruction.vcxproj  3D_Reconstruction.vcxproj.filters  CMakeLists.txt  README.md
3D_Reconstruction/forms/: mainwindow.ui
3D_Reconstruction/include/: CloudMaker.h  PointFinder.h  PointReconstructor.h  mainwindow.h  reconstmanager.h
3D_Reconstruction/src/: CloudMaker.cpp  PointFinder.cpp  PointReconstructor.cpp  mainwindow.cpp  reconstmanager.cpp
CPO_Makuat_projekt1/: CPO_Makuat_projekt1.cpp  CPO_Makuat_projekt1.vcxproj  CPO_Makuat_projekt1.vcxproj.filters
IPSM_Makurat/AI_upscaling/: AI_upscaling.pro  clientinterface.h  imagehandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  processedhandler.cpp  processedhandler.h
IPSM_Makurat/server/: processor.py
MorphologicalOp/: README.md
PlotsDrawer/: README.md  script.py
PlotsDrawer/data/: P11.csv  P12.csv  P13.csv  P15.csv  P17.csv  P19.csv  P3.csv  P6.csv  P7.csv  P9.csv
Simple Processing/: CPO_Makuat_projekt1.cpp  CPO_Makuat_projekt1.vcxproj  README.md
Super-Resolution/: README.md
Super-Resolution/Server/: processor.py  server.py
Super-Resolution/Server/configs/: faces.yaml
Super-Resolution/Server/models/: face_trainer.py  pseudo_model.py
Super-Resolution/User_app/: clientinterface.cpp  imagehandler.cpp  preprocessedhandler.cpp  preprocessedhandler.h
card recognition/: .gitignore  README.md  card recognition.cpp  card recognition.vcxproj  card recognition.vcxproj.filters
tinyPyScript/: omp.py
tinyPyScript/data/: P1.csv  P10.csv  P14.csv  P16.csv  P18.csv  P2.csv  P20.csv  P4.csv  P5.csv  P8.csv
