cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(3D_Reconstruction 3D_Reconstruction.cpp)
target_link_libraries(3D_Reconstruction ${PCL_LIBRARIES})
message("PCL_LIBRARIES - ${PCL_LIBRARIES}")